# internal/delivery/http/user_book_handler.go
@@ -2,6 +2,7 @@ package http
 
 import (
 	"github.com/faridlan/omni-library-api/internal/domain"
+	"github.com/faridlan/omni-library-api/internal/utils"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -30,18 +31,23 @@ const DummyUserID = "08a2fccf-46c8-473f-bb86-53a1c0b2b8a6"
 // @Produce json
 // @Param request body AddBookRequest true "Payload berisi ID Buku"
 // @Success 201 {object} domain.UserBook "Buku berhasil ditambahkan"
-// @Failure 400 {object} ErrorResponse "Format JSON salah"
-// @Failure 409 {object} ErrorResponse "Buku sudah ada di rak (Conflict)"
+// @Failure 400 {object} utils.ErrorResponse "Format JSON salah"
+// @Failure 409 {object} utils.ErrorResponse "Buku sudah ada di rak (Conflict)"
+// @Failure 500 {object} utils.ErrorResponse "Gagal menyimpan buku ke rak"
 // @Router /api/library [post]
 func (h *UserBookHandler) AddBook(c *fiber.Ctx) error {
 	var req AddBookRequest
 	if err := c.BodyParser(&req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{Error: "Format JSON salah"})
+		return utils.SendError(c, fiber.StatusBadRequest, "Format JSON salah")
+	}
+
+	if err := utils.ValidateStruct(&req); err != nil {
+		return utils.SendError(c, fiber.StatusBadRequest, err.Error())
 	}
 
 	result, err := h.usecase.TrackNewBook(c.Context(), DummyUserID, req.BookID)
 	if err != nil {
-		return c.Status(fiber.StatusConflict).JSON(ErrorResponse{Error: err.Error()})
+		return utils.HandleDomainError(c, err)
 	}
 
 	return c.Status(fiber.StatusCreated).JSON(result)
@@ -56,20 +62,26 @@ func (h *UserBookHandler) AddBook(c *fiber.Ctx) error {
 // @Param book_id path string true "ID Buku di database master"
 // @Param request body UpdateProgressRequest true "Payload update progres"
 // @Success 200 {object} domain.UserBook "Berhasil update progres"
-// @Failure 400 {object} ErrorResponse "Format JSON salah"
-// @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Failure 400 {object} utils.ErrorResponse "Format JSON salah"
+// @Failure 404 {object} utils.ErrorResponse "Buku tidak ditemukan di rak"
+// @Failure 500 {object} utils.ErrorResponse "Internal Server Error"
 // @Router /api/library/{book_id} [put]
 func (h *UserBookHandler) UpdateProgress(c *fiber.Ctx) error {
 	bookID := c.Params("book_id")
 
 	var req UpdateProgressRequest
 	if err := c.BodyParser(&req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(ErrorResponse{Error: "Format JSON salah"})
+		return utils.SendError(c, fiber.StatusBadRequest, "Format JSON salah")
+	}
+
+	if err := utils.ValidateStruct(&req); err != nil {
+		return utils.SendError(c, fiber.StatusBadRequest, err.Error())
 	}
 
 	result, err := h.usecase.UpdateReadingStatus(c.Context(), DummyUserID, bookID, req.Status, req.CurrentPage, req.Rating)
 	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(ErrorResponse{Error: err.Error()})
+
+		return utils.HandleDomainError(c, err)
 	}
 
 	return c.Status(fiber.StatusOK).JSON(result)
@@ -82,17 +94,17 @@ func (h *UserBookHandler) UpdateProgress(c *fiber.Ctx) error {
 // @Produce json
 // @Param status query string false "Filter status: TO_READ, READING, FINISHED"
 // @Success 200 {array} domain.UserBookWithMetadata "Daftar buku di rak"
-// @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Failure 404 {object} utils.ErrorResponse "Rak buku tidak ditemukan"
+// @Failure 500 {object} utils.ErrorResponse "Internal Server Error"
 // @Router /api/library [get]
 func (h *UserBookHandler) GetMyLibrary(c *fiber.Ctx) error {
 	statusFilter := c.Query("status")
 
 	books, err := h.usecase.GetUserLibrary(c.Context(), DummyUserID, statusFilter)
 	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(ErrorResponse{Error: err.Error()})
+		return utils.HandleDomainError(c, err)
 	}
 
-	// Best practice: Cegah return JSON null jika rak masih kosong
 	if books == nil {
 		books = make([]*domain.UserBookWithMetadata, 0)
 	}
